<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="30dp"
    android:orientation="vertical"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/brandon_reg"
        android:textColor="@color/dark_gray"
        android:text="@string/slow_internet_connection"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:textSize="18sp"
        android:textColor="@color/dark_gray"
        android:fontFamily="@font/brandon_reg"
        android:text="@string/check_settings"/>

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:fontFamily="@font/brandon_reg"
        android:text="@string/try_again"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"/>

</LinearLayout>