<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@android:color/white"
    android:padding="35dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/brandon_reg"
        android:textColor="@color/dark_gray"
        android:text="@string/logout_warning"/>

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:text="@string/log_out"
        android:textColor="@android:color/white"
        android:fontFamily="@font/brandon_reg"
        android:textSize="18sp"
        android:background="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/brandon_reg"
        android:textSize="18sp"
        android:text="@string/cancel"
        android:background="@drawable/stroke_black_05"/>

</LinearLayout>