<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".ui.booking.details.BookingDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="40dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/calendar_margin_bottom">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/calendar_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/calendar_view"
                app:layout_constraintStart_toStartOf="@id/calendar_view"
                app:layout_constraintEnd_toEndOf="@id/calendar_view"
                android:paddingStart="@dimen/calendar_header_padding_start_end"
                android:paddingEnd="@dimen/calendar_header_padding_start_end">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/calendar_arrow_height"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/ic_arrow_back"
                    android:contentDescription="@string/move_back"/>

                <TextView
                    android:id="@+id/current_month_headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/back_button"
                    app:layout_constraintEnd_toStartOf="@id/forward_button"
                    android:textAllCaps="true"
                    style="@style/CalendarHeaderTextStyle"/>

                <ImageView
                    android:id="@+id/forward_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/calendar_arrow_height"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/ic_arrow_forward"
                    android:contentDescription="@string/move_forward"
                    android:background="@android:color/transparent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                android:id="@+id/calendar_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="@dimen/calendar_width"
                app:layout_constraintTop_toBottomOf="@id/calendar_header"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:mcv_selectionColor="@color/softRed"
                app:mcv_firstDayOfWeek="monday"
                app:mcv_headerTextAppearance="@style/CalendarHeaderTextStyle"
                app:mcv_weekDayTextAppearance="@style/CalendarWeekDayTextStyle"
                app:mcv_dateTextAppearance="@style/CalendarDateTextStyle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/selected_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/brandon_reg"
            android:layout_marginStart="@dimen/booking_items_margin_start_end"
            android:layout_marginEnd="@dimen/booking_items_margin_start_end"
            android:text="@string/selected_date"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_18" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="@dimen/booking_items_margin_start_end"
            android:layout_marginEnd="@dimen/booking_items_margin_start_end">

            <TextView
                android:id="@+id/adults_headline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/adults"
                app:layout_constraintEnd_toEndOf="@id/adults"
                app:layout_constraintBottom_toTopOf="@id/adults"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/booking_adults"
                style="@style/HyperTextViewStyle" />

            <com.zeustech.excursions.customViews.MenuButton
                android:id="@+id/adults"
                app:layout_constraintTop_toBottomOf="@+id/adults_headline"
                app:layout_constraintBottom_toBottomOf="@+id/adults_tip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/children"
                android:layout_width="0dp"
                android:layout_height="@dimen/menu_item_height"
                android:layout_marginEnd="@dimen/margin_end_10"
                android:text="@string/num_2"
                style="@style/MenuButtonStyle"/>

            <ImageView
                android:layout_height="0dp"
                android:layout_width="@dimen/menu_arrow_size"
                android:layout_marginEnd="5dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toBottomOf="@id/adults"
                app:layout_constraintBottom_toTopOf="@id/adults"
                app:layout_constraintEnd_toEndOf="@id/adults"
                android:src="@drawable/keyboard_arrow_down"
                android:contentDescription="@string/press_button"/>

            <TextView
                android:id="@+id/adults_tip"
                app:layout_constraintTop_toBottomOf="@+id/adults"
                app:layout_constraintStart_toStartOf="@id/adults"
                app:layout_constraintEnd_toEndOf="@id/adults"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/valid_adults_age"
                android:textColor="@color/gray"
                style="@style/HyperTextDescription" />

            <TextView
                android:id="@+id/children_headline"
                app:layout_constraintTop_toTopOf="@+id/adults_headline"
                app:layout_constraintBottom_toBottomOf="@+id/adults_headline"
                app:layout_constraintStart_toStartOf="@id/children"
                app:layout_constraintEnd_toEndOf="@id/children"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/booking_children"
                style="@style/HyperTextViewStyle"/>

            <com.zeustech.excursions.customViews.MenuButton
                android:id="@+id/children"
                app:layout_constraintTop_toTopOf="@+id/adults"
                app:layout_constraintBottom_toBottomOf="@+id/adults"
                app:layout_constraintStart_toEndOf="@id/adults"
                app:layout_constraintEnd_toStartOf="@id/infants"
                android:layout_width="0dp"
                android:layout_height="@dimen/menu_item_height"
                android:layout_marginEnd="@dimen/margin_end_10"
                android:text="@string/num_0"
                style="@style/MenuButtonStyle"/>

            <ImageView
                android:layout_height="0dp"
                android:layout_width="@dimen/menu_arrow_size"
                android:layout_marginEnd="5dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toBottomOf="@id/children"
                app:layout_constraintBottom_toTopOf="@id/children"
                app:layout_constraintEnd_toEndOf="@id/children"
                android:src="@drawable/keyboard_arrow_down"
                android:contentDescription="@string/press_button"/>

            <TextView
                android:id="@+id/children_tip"
                app:layout_constraintTop_toTopOf="@+id/adults_tip"
                app:layout_constraintStart_toStartOf="@id/children"
                app:layout_constraintEnd_toEndOf="@id/children"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/valid_children_age"
                android:textColor="@color/gray"
                style="@style/HyperTextDescription"/>

            <TextView
                android:id="@+id/infants_headline"
                app:layout_constraintTop_toTopOf="@+id/adults_headline"
                app:layout_constraintBottom_toBottomOf="@+id/adults_headline"
                app:layout_constraintStart_toStartOf="@id/infants"
                app:layout_constraintEnd_toEndOf="@id/infants"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/booking_infants"
                style="@style/HyperTextViewStyle"/>

            <com.zeustech.excursions.customViews.MenuButton
                android:id="@+id/infants"
                app:layout_constraintTop_toTopOf="@+id/adults"
                app:layout_constraintBottom_toBottomOf="@+id/adults"
                app:layout_constraintStart_toEndOf="@id/children"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="@dimen/menu_item_height"
                android:text="@string/num_0"
                style="@style/MenuButtonStyle"/>

            <ImageView
                android:layout_height="0dp"
                android:layout_width="@dimen/menu_arrow_size"
                android:layout_marginEnd="5dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toBottomOf="@id/infants"
                app:layout_constraintBottom_toTopOf="@id/infants"
                app:layout_constraintEnd_toEndOf="@id/infants"
                android:src="@drawable/keyboard_arrow_down"
                android:contentDescription="@string/press_button"/>

            <TextView
                android:id="@+id/infants_tip"
                app:layout_constraintTop_toTopOf="@+id/adults_tip"
                app:layout_constraintStart_toStartOf="@id/infants"
                app:layout_constraintEnd_toEndOf="@id/infants"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/valid_infants"
                android:textColor="@color/gray"
                style="@style/HyperTextDescription"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/booking_items_margin_start_end"
            android:layout_marginEnd="@dimen/booking_items_margin_start_end">

            <TextView
                android:id="@+id/exc_language_headline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/excursion_language"
                style="@style/HyperTextViewStyle"/>

            <ImageView
                android:layout_height="0dp"
                android:layout_width="@dimen/menu_arrow_size"
                android:layout_marginEnd="5dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toBottomOf="@id/language"
                app:layout_constraintBottom_toTopOf="@id/language"
                app:layout_constraintEnd_toEndOf="@id/language"
                android:src="@drawable/keyboard_arrow_down"
                android:contentDescription="@string/press_button"/>

            <com.zeustech.excursions.customViews.MenuButton
                android:id="@+id/language"
                app:layout_constraintTop_toBottomOf="@id/exc_language_headline"
                app:layout_constraintStart_toStartOf="@id/exc_language_headline"
                app:layout_constraintEnd_toEndOf="@id/exc_language_headline"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="0dp"
                android:layout_height="@dimen/menu_item_height"
                android:textAllCaps="false"
                android:text="@string/english"
                android:textSize="@dimen/text_size_18"
                style="@style/MenuButtonStyle"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:layout_width="200dp"
            android:layout_height="0.8dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/exc_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/booking_items_margin_start_end"
            android:layout_marginEnd="@dimen/booking_items_margin_start_end"
            android:fontFamily="@font/brandon_reg"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_19"/>

        <TextView
            android:id="@+id/pickup_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/booking_items_margin_start_end"
            android:layout_marginEnd="@dimen/booking_items_margin_start_end"
            android:fontFamily="@font/brandon_reg"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_18"
            android:text="@string/pickup_point"/>

        <TextView
            android:id="@+id/pickup_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/booking_items_margin_start_end"
            android:layout_marginEnd="@dimen/booking_items_margin_start_end"
            android:fontFamily="@font/brandon_reg"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_18"
            android:text="@string/pickup_time"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/booking_items_margin_start_end"
            android:layout_marginEnd="@dimen/booking_items_margin_start_end"
            android:fontFamily="@font/brandon_reg"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_18"
            android:text="@string/excursion_price"/>

        <TextView
            android:id="@+id/included_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/booking_items_margin_start_end"
            android:layout_marginEnd="@dimen/booking_items_margin_start_end"
            android:textColor="@android:color/black"
            android:visibility="invisible"
            android:text="@string/included"
            style="@style/HyperTextViewStyle"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginStart="@dimen/booking_items_margin_start_end"
            android:layout_marginEnd="@dimen/booking_items_margin_start_end">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/included_recycler_view"
                android:nestedScrollingEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <com.zeustech.excursions.customViews.EventButton
            android:id="@+id/cart_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="@dimen/booking_items_margin_start_end"
            android:layout_marginEnd="@dimen/booking_items_margin_start_end"
            android:textSize="@dimen/text_size_18"
            android:text="@string/add_to_cart"/>

        <com.zeustech.excursions.customViews.EventButton
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/booking_items_margin_start_end"
            android:layout_marginEnd="@dimen/booking_items_margin_start_end"
            android:textSize="@dimen/text_size_18"
            android:text="@string/next" />

    </LinearLayout>

</ScrollView>